--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio-website",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://AnshTheCoder1248.github.io/website-deploy-test/",
+  "homepage": "https://AnshTheCoder1248.github.io/website-deploy-test",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
